--- a/README
+++ b/README
@@ -1,2 +1,7 @@
-A Metro-inspired select box replacement.
-It tries to add the peeking text that metro is somewhat known for.
+##Metro Select
+[![Build Status](https://travis-ci.org/metro-start/metro-select.svg?branch=master)](https://travis-ci.org/metro-start/metro-select)
+<!--[![Build Status](https://circleci.com/gh/metro-start/metro-select/tree/master.png?circle-token=:circle-token)](https://circleci.com/gh/chustar/metro-select)-->
+
+A new tab page for Google Chrome inspired by Zune.
+
+[Available on the Google Chrome Store](https://chrome.google.com/webstore/detail/bbhdfpmfdplolnnkpdepnelcfdmikjfd)
